--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,6 +7,6 @@
   </footer> -->
   
   <footer class="w-full  bg-[#c73967] text-white p-6 text-center shadow-[0_-4px_10px_rgba(0,0,0,0.1)]">
-    <p>&copy; 2025 Mi Portafolio. Todos los derechos reservados.</p>
+    <p>&copy; 2025 My Portfolio. All rights reserved.</p>
   </footer>
   
