--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,11 +12,11 @@ const { name, role, photo, description } = Astro.props;
           <p class="text-xl">{description}</p>
         </div>
         <div class="flex flex-row gap-2 ">
-          <a href="#">
-            <button class="bg-[#c73967] rounded-md text-white h-10 px-4 py-2 hover:scale-105 transition-transform">Contáctame</button>
+          <a href="#contact">
+            <button class="bg-[#c73967] rounded-md text-white h-10 px-4 py-2 hover:scale-105 transition-transform">Contact me</button>
           </a>
-          <a href="#">
-            <button class="bg-white border border-[#ff7b00] rounded-md text-[#ff7b00] h-10 px-4 py-2 hover:scale-105 transition-transform">Proyectos</button>
+          <a href="#projectCard">
+            <button class="bg-white border border-[#ff7b00] rounded-md text-[#ff7b00] h-10 px-4 py-2 hover:scale-105 transition-transform">Projects</button>
           </a>
         </div>
         <div class="flex gap-4 ">
