--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,40 @@
 ---
 // src/components/Header.astro
 ---
-  <header class="w-full bg-white p-6 shadow-md ">
-    <div class="container flex items-center justify-between">
-      <div class="flex items-center gap-2">
-        <a href="/" class=" px-5 font-bold text-xl text-[#c73967]">VAQ</a>
-      </div>
-      <button class="md:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu h-6 w-6">
-          <line x1="4" x2="20" y1="12" y2="12"></line><line x1="4" x2="20" y1="6" y2="6"></line>
-          <line x1="4" x2="20" y1="18" y2="18"></line>
-        </svg>
-      </button>
-      <nav class="hidden md:flex items-center gap-6">
-        <a href="#about" class="text-sm font-medium hover:text-primary hover:scale-115 transition-transform hover:text-[#c73967]">About</a>
-        <a href="#skillCard" class="text-sm font-medium hover:text-primary hover:scale-115 transition-transform hover:text-[#c73967]">Skills</a>
-        <a href="#projectCard" class="text-sm font-medium hover:text-primary hover:scale-115 transition-transform hover:text-[#c73967]">Projects</a>
-        <a href="#contact" class="text-sm font-medium hover:text-primary hover:scale-115 transition-transform hover:text-[#c73967]">Contact</a>
-      </nav>
+<header class="w-full bg-white p-6 shadow-md">
+  <div class="container flex items-center justify-between">
+    <div class="flex items-center gap-2">
+      <a href="/" class="px-5 font-bold text-xl text-[#c73967]">VAQ</a>
     </div>
-  </header>
-  
+    <button class="md:hidden" id="icon-menu">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu h-6 w-6">
+        <line x1="4" x2="20" y1="12" y2="12"></line>
+        <line x1="4" x2="20" y1="6" y2="6"></line>
+        <line x1="4" x2="20" y1="18" y2="18"></line>
+      </svg>
+    </button>
+    <nav class="hidden md:flex items-center gap-6">
+      <a href="#about" class="text-sm font-medium hover:scale-115 transition-transform hover:text-[#c73967]">About</a>
+      <a href="#skillCard" class="text-sm font-medium  hover:scale-115 transition-transform hover:text-[#c73967]">Skills</a>
+      <a href="#projectCard" class="text-sm font-medium  hover:scale-115 transition-transform hover:text-[#c73967]">Projects</a>
+      <a href="#contact" class="text-sm font-medium  hover:scale-115 transition-transform hover:text-[#c73967]">Contact</a>
+    </nav>
+  </div>
+<!-- Menú desplegable -->
+  <nav id="menu-responsive" class="md:hidden hidden flex flex-col gap-6 bg-white p-4 shadow-lg">
+    <a href="#about" class="text-sm font-medium   hover:text-[#c73967]">About</a>
+    <a href="#skillCard" class="text-sm font-medium   hover:text-[#c73967]">Skills</a>
+    <a href="#projectCard" class="text-sm font-medium   hover:text-[#c73967]">Projects</a>
+    <a href="#contact" class="text-sm font-medium   hover:text-[#c73967]">Contact</a>
+  </nav>
+</header>
+
+<script >
+  const iconMenu = document.getElementById("icon-menu");
+  const menuResponsive = document.getElementById("menu-responsive");
+
+  iconMenu.addEventListener("click", () => {
+    menuResponsive.classList.toggle("hidden");
+  });
+
+</script>
