--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -67,7 +67,7 @@
             <textarea  required class="block w-full h-10 rounded-md border border-gray-400 px-3 py-2 placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-[#c73967] focus:border-[#c73967] min-h-[150px]" id="message" placeholder="Your message">
             </textarea>
         </div>
-        <button class="bg-[#ff7b00] text-white rounded px-4 py-2 w-full" type="submit">Send Message</button>
+        <button class="bg-[#393456] text-white rounded px-4 py-2 w-full" type="submit">Send Message</button>
     </form>
 </div>
 </div>
@@ -82,17 +82,17 @@
         type="text"
         id="name"
         name="name" 
-        placeholder="Tu nombre"
+        placeholder="Escribe tu nombre"
         required
         class="block w-full h-10 rounded-md border border-gray-400 px-3 py-2 placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-[#c73967] focus:border-[#c73967]"
       />
     </div>
     <div class="space-y-2">
-      <label for="email" class="block text-m font-medium mb-1">Email</label>
+      <label for="email" class="block text-m font-medium mb-1">Correo electrónico</label>
       <input
         id="email"
         name="email" 
-        placeholder="Your email"
+        placeholder="Escribe tu correo electrónico"
         type="email"
         required
         class="block w-full h-10 rounded-md border border-gray-400 px-3 py-2 placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-[#c73967] focus:border-[#c73967]"
@@ -100,26 +100,26 @@
     </div>
   </div>
   <div class="space-y-2">
-    <label for="subject" class="block text-m font-medium mb-1">Subject</label>
+    <label for="subject" class="block text-m font-medium mb-1">Asunto</label>
     <input
       id="subject"
       name="subject" 
-      placeholder="Subject of your message"
+      placeholder="Escribe el asunto del mensaje"
       required
       class="block w-full h-10 rounded-md border border-gray-400 px-3 py-2 placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-[#c73967] focus:border-[#c73967]"
     />
   </div>
   <div class="space-y-2">
-    <label for="message" class="block text-m font-medium mb-1">Message</label>
+    <label for="message" class="block text-m font-medium mb-1">Mensaje</label>
     <textarea
       id="message"
       name="message" 
       required
       class="block w-full h-10 rounded-md border border-gray-400 px-3 py-2 placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-[#c73967] focus:border-[#c73967] min-h-[150px]"
-      placeholder="Your message"
+      placeholder="Escribe tu mensaje"
     ></textarea>
   </div>
-  <button class="bg-[#ff7b00] text-white rounded px-4 py-2 w-full" type="submit">
-    Send Message
+  <button class="bg-[#7126d9] text-white rounded px-4 py-2 w-full" type="submit">
+    Enviar
   </button>
 </form>
