--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -3,7 +3,7 @@
 const { name, icon, level } = Astro.props;
 ---
 <section id="skillCard" class="w-full py-4">
-  <div class="bg-white shadow-md rounded-lg p-4 flex flex-col sm:flex-row items-center space-x-0 sm:space-x-4 hover:scale-105 transition-transform">
+  <div class="bg-[#f9f7fc] shadow-md rounded-lg p-4 flex flex-col sm:flex-row items-center space-x-0 sm:space-x-4 hover:scale-105 transition-transform">
     <img src={icon} alt={name} class="w-10 h-10 mb-2 sm:mb-0" />
     <div class="text-center sm:text-left">
       <h3 class="font-semibold text-lg">{name}</h3>
