--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,40 +1,43 @@
 ---
 // src/components/Hero.astro
-const { name, role, photo, description } = Astro.props;
+const { name, lastname, role, photo, description } = Astro.props;
 ---
-<section class="w-full ">
+<section id="Hero" class="w-full h-screen flex flex-col items-center justify-center px-4 bg-[#f9f7fc]">
   <div class="container px-4 ">
     <div class="grid grid-cols-2 gap-6">
       <div class="flex flex-col justify-center space-y-4">
         <div class="space-y-2">
-          <h1 class="text-6xl font-extrabold text-[#c73967]">{name}</h1>
-          <p class="text-2xl font-medium text-[#f28f31]">{role}</p>
-          <p class="text-xl">{description}</p>
+          <p class="text-l pb-2 font-semibold text-[#7126d9]">Hola! Yo soy</p>
+          <h1 class="text-6xl font-bold text-[#393456]">{name}
+            <span class="text-[#7126d9] underline decoration-4 underline-offset-8 decoration-[#ddcdf5]">{lastname}</span>
+          </h1>
+          <p class="text-2xl pt-5 font-extralight text-gray">{role}</p>
+          <p class="text-l pt-4">{description}</p>
         </div>
-        <div class="flex flex-row gap-2 ">
+        <div class="flex flex-row gap-2 pt-3">
           <a href="#contact">
-            <button class="bg-[#c73967] rounded-md text-white h-10 px-4 py-2 hover:scale-105 transition-transform">Contact me</button>
+            <button class="bg-[#7126d9] rounded-md text-white h-10 px-4 py-2 hover:scale-105 transition-transform hover:bg-[#7d3adc] font-semibold">Contáctame</button>
           </a>
           <a href="#projectCard">
-            <button class="bg-white border border-[#ff7b00] rounded-md text-[#ff7b00] h-10 px-4 py-2 hover:scale-105 transition-transform">Projects</button>
+    <button class="bg-white border border-[#e7e2f0] rounded-md text-[#393456] h-10 px-4 py-2 hover:scale-105 transition-transform font-semibold hover:bg-[#7126d9] hover:text-[#ffff] whitespace-nowrap">Ver proyectos</button>
           </a>
         </div>
         <div class="flex gap-4 ">
             <a href="https://github.com" target="_blank" class="text-[#5e5e5e]" >
-              <button class="inline-flex items-center justify-center gap-2 h-10 w-10 hover:scale-115 transition-transform hover:text-[#ff7b00]">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github h-5 w-5"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg>
+              <button class="inline-flex items-center justify-center gap-2 h-12 w-12 hover:scale-115 transition-transform hover:text-[#7126d9] hover:rotate-12">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github h-6 w-6"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg>
                 
               </button>
             </a>
             <a href="https://linkedin.com" target="_blank" class="text-[#5e5e5e]">
-              <button class="inline-flex items-center justify-center gap-2 h-10 w-10 hover:scale-115 transition-transform hover:text-[#ff7b00]">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-linkedin h-5 w-5"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect width="4" height="12" x="2" y="9"></rect><circle cx="4" cy="4" r="2"></circle>
+              <button class="inline-flex items-center justify-center gap-2 h-12 w-12 hover:scale-115 transition-transform hover:text-[#7126d9] hover:rotate-12">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-linkedin h-6 w-6"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect width="4" height="12" x="2" y="9"></rect><circle cx="4" cy="4" r="2"></circle>
                 </svg>
               </button>
             </a>
             <a href="mailto:contact@example.com" class="text-[#5e5e5e]">
-              <button class="inline-flex items-center justify-center gap-2 h-10 w-10 hover:scale-115 transition-transform hover:text-[#ff7b00]">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail h-5 w-5"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+              <button class="inline-flex items-center justify-center gap-2 h-12 w-12 hover:scale-115 transition-transform hover:text-[#7126d9] hover:rotate-12">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail h-6 w-6"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
                 </svg>  
               </button>
             </a>
