--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Footer from '../components/Footer.astro';
 		<meta name="generator" content={Astro.generator} />
 		<title>My Portfolio</title>
 	</head>
-	<body class="bg-white text-[#5e5e5e]">
+	<body class="bg-[#f9f7fc] text-[#5e5e5e]">
 		<Header />
 		<main class="container mx-auto px-4 py-8">
 			<slot />
