--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,8 @@ import Footer from '../components/Footer.astro';
 	</head>
 	<body class="bg-[#f9f7fc] text-[#5e5e5e]">
 		<Header />
-		<main class="container mx-auto px-4 py-8">
+		<!-- <main class="container mx-auto px-4 py-8"> -->
+		<main>
 			<slot />
 		</main>
 		<Footer />
