--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,11 +1,13 @@
 ---
 // src/components/About.astro
 ---
-<section id="about" class="w-full py-10 min-h-screen flex flex-col items-center justify-center px-4 pt-24 bg-[#f9f7fc] overflow-hidden">
-  <div class="w-full max-w-6xl mx-auto px-4">
-
-    <div class="flex flex-col items-start justify-center space-y-4 text-left">
-      <div class="space-y-4">
+<!-- <section id="about" class="w-full py-10 min-h-screen flex flex-col items-center justify-center px-4 pt-24 bg-[#f9f7fc] overflow-hidden">
+  <div class="w-full max-w-6xl mx-auto px-4"> -->
+  
+  <section id="about" class="w-full h-screen flex flex-col items-center justify-center bg-[#f9f7fc] overflow-hidden px-4 md:px-8 lg:px-16">
+  <div class="max-w-7xl mx-auto px-4 w-full">
+    <div class="flex flex-col items-start justify-center space-y-4">
+      <div class="">
         <h2 class="text-5xl font-bold text-[#393456] text-left">Sobre mí</h2>
           <div class="w-20 h-1 bg-[#7126d9] mt-2 rounded-full"></div>
 
@@ -13,10 +15,10 @@
       </div>
       
     </div>
-<div class="mx-auto grid max-w-6xl items-center gap-12 py-2 grid-cols-1 md:grid-cols-[2fr_1fr]">
+<div class="mx-auto grid max-w-7xl items-center pt-4 gap-12 py-2 grid-cols-1 md:grid-cols-[2fr_1fr]">
       <div>
 
-        <div class="flex items-center justify-start space-x-2 mb-4">
+        <div class="flex items-center justify-start">
             <svg  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 text-[#7126d9]">
               <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
             </svg>
