--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import ContactForm from '../components/ContactForm.astro';
 ---
 
 <Layout>
+
+  <!-- HERO -->
 	<Hero 
         name="Valeria"
         lastname="Avalos"
@@ -15,87 +17,54 @@ import ContactForm from '../components/ContactForm.astro';
         photo="src/assets/Hero.png"
         description="Construyendo soluciones elegantes a problemas complejos con tecnologías modernas."
     />
-    <About>
+
+  <!-- SOBRE MI -->
+  <About>
+    <div class="flex flex-col items-center space-y-4">
+      <!-- Foto circular -->
+      <div class="w-40 h-40 rounded-full border-4  hover:scale-105 transition-transform border-[#7126d9] overflow-hidden">
+        <img src="/src/assets/perfil.png" alt="Valeria Avalos" class="w-full h-full object-cover" />
+      </div>
+
+      <!-- Nombre -->
+      <h2 class="text-2xl font-bold text-[#393456]">Valeria Avalos</h2>
       
-        <div slot="intro">
-          
-          <!-- <div class="flex items-center justify-start space-x-2 mb-4">
-            <svg  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 text-[#7126d9]">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
-</svg>
+      <!-- Título -->
+      <p class="text-gray-600">Ingeniera de Computación y Sistemas</p>
 
-            <h5 class="text-left text-xl font-semibold">
-            Bio
-          </h5>
-          </div> -->
-          <!-- <p class="mx-auto text-xl text-justify">
-            Soy ingeniera de Computación y Sistemas, actualmente en formación en el bootcamp Nómada. Me interesa crear productos digitales con una base sólida en lógica y un diseño enfocado en el usuario, aplicando principios de UX y UI para lograr experiencias efectivas.
-          </p> -->
-        </div>
-       
-        <!-- <div class="space-y-2">
-          <h3 class="text-xl font-bold text-[#7126d9]">My Journey</h3>
-          <p>I started my journey as a web developer in 2018, focusing on front-end technologies. Over the years, I've expanded my skills to include back-end development, cloud services, and DevOps practices.</p>
-        </div>
-        <div class="space-y-2 ">
-          <h3 class="text-xl font-bold text-[#7126d9]">My Approach</h3>
-          <p>I believe in creating clean, maintainable code that solves real problems. I'm passionate about user experience and performance optimization.</p>
-        </div>
-        <div class="space-y-2 ">
-          <h3 class="text-xl font-bold text-[#7126d9]">When I'm Not Coding</h3>
-          <p>I enjoy hiking, reading science fiction, and experimenting with new cooking recipes. I'm also an avid photographer in my spare time.</p>
-        </div> -->
+      <!-- Etiquetas -->
+      <div class="flex space-x-2">
+        <span class="px-3 py-1 border border-[#7126d9] rounded-full text-[#7126d9] text-sm font-medium">UI/UX</span>
+        <span class="px-3 py-1 border border-[#7126d9] rounded-full text-[#7126d9] text-sm font-medium">Tailwind CSS</span>
+      </div>
 
-        <div class="flex flex-col items-center space-y-4">
-  <!-- Foto circular con borde morado -->
-  <div class="w-40 h-40 rounded-full border-4  hover:scale-105 transition-transform border-[#7126d9] overflow-hidden">
-    <img src="/src/assets/perfil.png" alt="Valeria Avalos" class="w-full h-full object-cover" />
-  </div>
+      <!-- Botón Descargar CV -->
+      <a href="/src/assets/CV - AVALOS QUISPE VALERIA CAMILA.pdf" download>
+        <button class="mt-4 bg-[#7126d9] text-white px-6 py-2 rounded-md hover:bg-[#7d3adc] font-semibold hover:scale-105 transition-transform">
+          Descargar CV
+        </button>
+      </a>
 
-  <!-- Nombre -->
-  <h2 class="text-2xl font-bold text-[#393456]">Valeria Avalos</h2>
-  
-  <!-- Título -->
-  <p class="text-gray-600">Ingeniera de Computación y Sistemas</p>
-
-  <!-- Etiquetas -->
-  <div class="flex space-x-2">
-    <span class="px-3 py-1 border border-[#7126d9] rounded-full text-[#7126d9] text-sm font-medium">UI/UX</span>
-    <span class="px-3 py-1 border border-[#7126d9] rounded-full text-[#7126d9] text-sm font-medium">Tailwind CSS</span>
-  </div>
-
-  <!-- Botón Descargar CV -->
-  <a href="/src/assets/CV - AVALOS QUISPE VALERIA CAMILA.pdf" download>
-  <button class="mt-4 bg-[#7126d9] text-white px-6 py-2 rounded-md hover:bg-[#7d3adc] font-semibold hover:scale-105 transition-transform">
-    Descargar CV
-  </button>
-</a>
-
-</div>
+    </div>
+  </About>
 
 
 
 
+  <!-- HABILIDADES -->
+     <section id="skillCard" class="w-full h-screen flex flex-col items-center justify-center bg-[#f9f7fc] px-4 md:px-8 lg:px-16">
+      <div class="max-w-7xl mx-auto  w-full">  
+      <div class="flex flex-col">
 
-
-
-
-
-
-
-
-    
-      </About>
-
-      <section id="skillCard" class="w-full h-screen flex flex-col items-center justify-center px-4 bg-[#f9f7fc]">
-        <div class="flex flex-col items-center justify-center space-y-4 text-center ">
-            <div class="space-y-4 max-w-6xl">
+           
+          <div class="">
               <h2 class="text-5xl font-bold text-[#393456] text-left">Habilidades</h2>
-          <div class="w-30 h-1 bg-[#7126d9] mt-2 rounded-full"></div>
-              <p class="mx-auto text-xl">Conozca algunas de las tecnologías y herramientas con las que llevo a cabo mis proyectos.</p>
+              <div class="w-30 h-1 bg-[#7126d9] mt-2 rounded-full"></div>
+              <p class="pt-4 mx-auto text-xl">Conozca algunas de las tecnologías y herramientas con las que llevo a cabo mis proyectos.</p>
             </div>
           </div>
-          <div class="mx-auto grid max-w-6xl gap-6 grid-cols-4 ">
+
+          <div class="mx-auto grid max-w-7xl gap-6 grid-cols-4 ">
             
             <SkillCard 
             name="HTML"
@@ -136,22 +105,29 @@ import ContactForm from '../components/ContactForm.astro';
                 name="Tailwind"
                 icon="https://nanostack.io/_next/image?url=https%3A%2F%2Fnanostack.s3.ap-south-1.amazonaws.com%2F1708452954835Group%20451.png&w=828&q=75"
                 level="Intermediate"
-            />
-            
+            />  
+            </div>
         </div>
-        
       </section>
 
-      <section id="projectCard" class="w-full h-screen flex flex-col items-center justify-center px-4 bg-[#f9f7fc]">
 
-        <div class="flex flex-col items-center justify-center space-y-4 text-center mt-10">
-            <div class="space-y-4 max-w-6xl">
+
+
+<!-- PROYECTOS -->
+      <section id="projectCard" class="w-full h-screen flex flex-col items-center justify-center bg-[#f9f7fc] px-4 md:px-8 lg:px-16">
+        <div class="max-w-7xl mx-auto  w-full">  
+
+        <div class="flex flex-col">
+
+      
+          <div class="space-y-4 max-w-6xl">
               <h2 class="text-5xl font-bold text-[#393456] text-left">Proyectos</h2>
           <div class="w-20 h-1 bg-[#7126d9] mt-2 rounded-full"></div>
               <p class="mx-auto text-xl">A continuación, comparto una selección de proyectos en los que he trabajado recientemente.</p>
             </div>
           </div>
-          <div class="mx-auto grid max-w-[1000px] gap-6  grid-cols-3 mt-5">
+        
+          <div class="mx-auto grid max-w-7xl gap-6  grid-cols-3 mt-5">
 
             <ProjectCard 
             title="Portafolio Personal"
@@ -176,31 +152,39 @@ import ContactForm from '../components/ContactForm.astro';
             technologies={['React', 'Tailwind CSS', 'Node.js']}
 
             />
+            </div>
         </div>
       </section>
 
-      <section id="contact" class="w-full bg-[#f9f7fc] pt-21 pb-15 ">
-        <div class="flex flex-col items-center justify-center space-y-4 text-center mt-10">
+
+
+
+<!-- CONTACTO -->
+
+      <section id="contact" class="w-full  bg-[#f9f7fc] pt-21 pb-15 items-center justify-center px-4 md:px-8 lg:px-16">
+         <div class="max-w-7xl mx-auto w-full">  
+        <div class="flex flex-col">
             <div class="space-y-4">
               <h2 class="text-5xl font-bold text-[#393456] text-left">Contáctame</h2>
-          <div class="w-20 h-1 bg-[#7126d9] mt-2 rounded-full"></div>
-              <p class="mx-auto text-xl pb-5">Para proyectos, colaboraciones o cualquier consulta, no dudes en contactarme!
-
-</p>
+             <div class="w-20 h-1 bg-[#7126d9] mt-2 rounded-full"></div>
+              <p class="mx-auto text-xl pb-5">Para proyectos, colaboraciones o cualquier consulta, no dudes en contactarme!</p>
             </div>
           </div>
-          <div class="mx-auto  max-w-[1000px]">
-
+        
+        <div class="mx-auto  max-w-7xl">
         <ContactForm />
-
-
+        </div>
         </div>
       </section>
-    <a href="#Hero" class="fixed bottom-5 right-5 z-50">
-  <div class="bg-[#7126d9] hover:bg-[#7d3adc] text-white p-3 rounded-full shadow-lg transition-transform hover:scale-110">
+
+
+<!-- BOTÓN FLECHA -->
+
+  <a href="#Hero" class="fixed bottom-5 right-5 z-50">
+     <div class="bg-[#7126d9] hover:bg-[#7d3adc] text-white p-3 rounded-full shadow-lg transition-transform hover:scale-110">
     ↑
-  </div>
-</a>
+    </div>
+  </a>
 
 
 </Layout>
