--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,10 +1,8 @@
 ---
 // src/components/About.astro
 ---
-<!-- <section id="about" class="w-full py-10 min-h-screen flex flex-col items-center justify-center px-4 pt-24 bg-[#f9f7fc] overflow-hidden">
-  <div class="w-full max-w-6xl mx-auto px-4"> -->
   
-  <section id="about" class="w-full h-screen flex flex-col items-center justify-center bg-[#f9f7fc] overflow-hidden px-4 md:px-8 lg:px-16">
+  <section id="about" class="w-full flex flex-col items-center justify-center bg-[#f9f7fc] px-4 md:px-8 lg:px-16 py-20">
   <div class="max-w-7xl mx-auto px-4 w-full">
     <div class="flex flex-col items-start justify-center space-y-4">
       <div class="">
@@ -36,9 +34,10 @@
 
       <!-- TARJETAS -->
 <!-- Contenedor de tarjetas -->
-<div class="mx-auto grid max-w-[1000px] items-stretch gap-8 py-2 grid-cols-2">
-<div class="rounded-lg border border-purple-300 bg-white backdrop-blur-sm shadow-sm p-6 text-purple-700 transition-transform duration-300 ease-in-out transform hover:scale-105">
-    <h3 class="text-lg font-semibold mb-4 flex items-center gap-2 text-purple-700">
+<div class="mx-auto grid max-w-7xl items-stretch gap-8 py-2 grid-cols-1 sm:grid-cols-2">
+
+<div class="rounded-lg border  bg-white  shadow-md p-6 text-[#7126d9] transition-transform duration-300 ease-in-out transform hover:scale-105">
+    <h3 class="text-lg font-semibold mb-4 flex items-center gap-2  text-[#7126d9]">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
         <path d="M21.42 10.922a1 1 0 0 0-.019-1.838L12.83 5.18a2 2 0 0 0-1.66 0L2.6 9.08a1 1 0 0 0 0 1.832l8.57 3.908a2 2 0 0 0 1.66 0z"></path>
         <path d="M22 10v6"></path>
@@ -59,8 +58,8 @@
       
     </div>
   </div>
-<div class="rounded-lg border border-purple-300 bg-white backdrop-blur-sm shadow-sm p-6 text-purple-700 transition-transform duration-300 ease-in-out transform hover:scale-105">
-    <h3 class="text-lg font-semibold mb-4 flex items-center gap-2 text-purple-700">
+<div class=" rounded-lg border  bg-white  shadow-md p-6 text-[#7126d9] transition-transform duration-300 ease-in-out transform hover:scale-105">
+    <h3 class="text-lg font-semibold mb-4 flex items-center gap-2 text-[#7126d9]">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
             <path d="M16 20V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
             <rect width="20" height="14" x="2" y="6" rx="2"></rect>
