--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -4,7 +4,7 @@ const { title, description, link, technologies = [] } = Astro.props;
 
 <section id="projectCard" class="w-full py-10">
   <div>
-    <a href={link} target="_blank" class="flex flex-col justify-between bg-[#f9f7fc] shadow-md rounded-lg p-6 hover:scale-105 transition-transform min-h-[20rem]">
+    <a href={link} target="_blank" class=" flex flex-col justify-between border border-[#7e3bdc] bg-white shadow-md rounded-lg p-6 hover:scale-105 transition-transform min-h-[20rem]">
       <div>
         <h3 class="text-xl font-bold text-[#7126d9]">{title}</h3>
         <p class="text-gray-600 mt-2">{description}</p>
@@ -12,9 +12,8 @@ const { title, description, link, technologies = [] } = Astro.props;
         <div class="flex flex-wrap gap-2 mt-4">
           {technologies.map(tech => (
             <span
-              class="inline-block bg-[#fff] text-[#5a3ea8] text-sm font-medium px-3 py-1 rounded-full border border-[#b3a1f9]"
-              tabindex="0"
-            >
+              class="inline-block bg-white text-[#5a3ea8] text-sm font-medium px-3 py-1 rounded-full border border-[#b3a1f9]"
+              tabindex="0">
               {tech}
             </span>
           ))}
