--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,9 @@ import ContactForm from '../components/ContactForm.astro';
     <div class="flex flex-col items-center space-y-4">
       <!-- Foto circular -->
       <div class="w-40 h-40 rounded-full border-4  hover:scale-105 transition-transform border-[#7126d9] overflow-hidden">
-        <img src="/src/assets/perfil.png" alt="Valeria Avalos" class="w-full h-full object-cover" />
+        <!-- <img src="/src/assets/perfil.png" alt="Valeria Avalos" class="w-full h-full object-cover" /> -->
+         <img src="/public/Hero.png" alt="Valeria Avalos" class="w-full h-full object-cover" />
+
       </div>
 
       <!-- Nombre -->
