--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,8 +32,7 @@ import ContactForm from '../components/ContactForm.astro';
     <div class="flex flex-col items-center space-y-4">
       <!-- Foto circular -->
       <div class="w-40 h-40 rounded-full border-4  hover:scale-105 transition-transform border-[#7126d9] overflow-hidden">
-        <!-- <img src="/src/assets/perfil.png" alt="Valeria Avalos" class="w-full h-full object-cover" /> -->
-         <img src="/public/Hero.png" alt="Valeria Avalos" class="w-full h-full object-cover" />
+        <img src="/src/assets/perfil.png" alt="Valeria Avalos" class="w-full h-full object-cover" /> 
 
       </div>
 
@@ -132,25 +131,25 @@ import ContactForm from '../components/ContactForm.astro';
 
             <ProjectCard 
             title="Portafolio Personal"
-            description="Sitio web construido con Astro, Tailwind y componentes reutilizables para mostrar mis habilidades y proyectos."
-            link="https://miportafolio.dev"
-            technologies={['React', 'Tailwind CSS', 'Node.js', 'Hola']}
+            description="Portafolio personal de una sola página desarrollado con Astro, HTML, JavaScript y Tailwind CSS, diseñado para mostrar proyectos, habilidades y experiencia de forma moderna, responsiva y rápida."
+            link="https://github.com/ValCam18/Portafolio"
+            technologies={['HTML', 'Tailwind CSS', 'JavaScript']}
 
             />
 
             <ProjectCard 
             title="To-Do App"
-            description="Aplicación web full stack con autenticación JWT y gestión de tareas (CRUD) usando React y Node.js."
-            link="https://gestordetareas.app"
-            technologies={['React', 'Tailwind CSS', 'Node.js']}
+            description="To-Do App creada con HTML, CSS y JavaScript que permite gestionar tareas de forma sencilla. Los usuarios pueden crear, eliminar y filtrar tareas, además de organizarlas por categorías para un mejor control y productividad."
+            link="https://github.com/ValCam18/to-do-app"
+            technologies={['JavaScript', 'CSS', 'HTML']}
 
             />
 
             <ProjectCard 
-            title="Dashboard"
-            description="Panel interactivo creado con Power BI y DAX, mostrando métricas clave de desempeño empresarial."
-            link="https://misproyectos.dev/dashboard"
-            technologies={['React', 'Tailwind CSS', 'Node.js']}
+            title="Sudoku"
+            description="Proyecto Sudoku desarrollado en C++ que permite generar, resolver y validar tableros de Sudoku. Incluye funcionalidades para ingresar números, verificar reglas del juego y ofrecer pistas, con una interfaz de consola simple para interactuar con el usuario."
+            link="https://github.com/ValCam18/Sudoku"
+            technologies={[ 'C++' ]}
 
             />
             </div>
