--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,14 +74,14 @@ import ContactForm from '../components/ContactForm.astro';
             </div>
           </div>
 
-         <div class="mx-auto grid max-w-7xl gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
+         <div class="mx-auto grid max-w-7xl gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-4">
 
          
 
             <SkillCard 
               name="Desarrollo Frontend" 
               icon="https://img.icons8.com/?size=100&id=87268&format=png&color=7e3bdc"
-              technologies={["React", "Tailwind CSS", "CSS"]}
+              technologies={["HTML", "Tailwind CSS", "CSS"]}
             />
             <SkillCard 
               name="Diseño UI/UX" 
@@ -147,7 +147,7 @@ import ContactForm from '../components/ContactForm.astro';
 
             <ProjectCard 
             title="Sudoku"
-            description="Proyecto Sudoku desarrollado en C++ que permite generar, resolver y validar tableros de Sudoku. Incluye funcionalidades para ingresar números, verificar reglas del juego y ofrecer pistas, con una interfaz de consola simple para interactuar con el usuario."
+            description="Proyecto Sudoku desarrollado en C++ que permite generar, resolver y validar tableros de Sudoku. Incluye funcionalidades para ingresar números, verificar reglas del juego y ofrecer pistas."
             link="https://github.com/ValCam18/Sudoku"
             technologies={[ 'C++' ]}
 
