--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -54,7 +54,7 @@
   <div>
     <h3 class="text-lg font-semibold mb-3 text-[#393456]">Conecta conmigo</h3>
     <div class="flex space-x-4">
-      <a href="https://github.com/tuperfil" target="_blank" class="bg-[#F4F1F9] p-3 rounded-full text-gray-500 hover:bg-[#7126d9] hover:text-white transition-colors" aria-label="GitHub">
+      <a href="https://github.com/ValCam18" target="_blank" class="bg-[#F4F1F9] p-3 rounded-full text-gray-500 hover:bg-[#7126d9] hover:text-white transition-colors" aria-label="GitHub">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" stroke-width="2.5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/>
           <path d="M9 18c-4.51 2-5-2-7-2"/>
